--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     the `--base-href` argument provided to `flutter build`.
   -->
   <base href="https://massoudsa55.github.io/">
+  <!-- <base href="/foo/"> -->
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
@@ -34,7 +35,7 @@
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    var serviceWorkerVersion = '2032987492';
+    var serviceWorkerVersion = '953210196';
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
