Edit title of index.html & name of manifest.json

--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>porfolio_flutter_app_and_website</title>
+  <title>Flutter & desktop developer With Messaoud Benkouider</title>
   <link rel="manifest" href="manifest.json">
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    var serviceWorkerVersion = '3002098793';
+    var serviceWorkerVersion = '2032093774';
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
